Atualização 'Sobre Nós

--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
             interessados em fazer negócios em outros países.
             Oferecemos “backoffice” nas áreas Financeira, Recursos Humanos, Tributária e Contabilidade, inclusive a
             abertura, legalização e regularização de empresas e negócios.
+        </p>
 
+        <p class="paragrafo-inferior">
             Com pesquisas de mercado, montamos toda estrutura organizacional, ambiente operacional e logística de suas
             atividades, com profissionais qualificados, competentes e continuamente treinados.
 
@@ -119,9 +121,9 @@
 
 <script>
 
-    let formulario = document.getElementById ("formulario-contato")
+    let formulario = document.getElementById("formulario-contato")
 
-    function formul(){
+    function formul() {
         formulario.className = "mostrar-formulario"
     }
 
