--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <title>Dev Contábil</title>
+    <title>Dev Contabil</title>
     <link rel="stylesheet" type="text/css" href="styles.css" link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400;700&display=swap" rel="stylesheet">
@@ -13,13 +13,13 @@
     <div class="caixa-superior">
 
         <div class="cabecalho">
-            <h2 class="titulo-cabecalho">Dev Contábil</h2>
+            <h2 class="titulo-cabecalho">Dev Contabil</h2>
             <a class="link-cabecalho" href="#titulo-inferior">Quem Somos</a>
             <a class="link-cabecalho" href="#titulo-meio">Serviços</a>
             <a class="link-cabecalho" onclick="formul()">Contato</a>
         </div>
 
-        <h1>Dev Contábil</h1>
+        <h1>Dev Contabil</h1>
 
         <form id="formulario-contato" action="https://formsubmit.co/victorsantos12dima@gmail.com" method="POST">
             <h3 class="titulo-formulario">Entre em contato</h3>
